# korea_growth

./: .gitignore  README.md  pyproject.toml  status.md
.claude/: settings.local.json
docs/: model.tex  model_review.md  model_update.md  paper_draft05032026.txt
scripts/: __init__.py  simulate_policy_shock.py  solve_toy.py
src/korea_growth/: __init__.py  checks.py  distributions.py  equilibrium.py  preferences.py  production.py  solver.py  trade.py  types.py
tests/: test_accounting.py  test_policy_calibration.py  test_toy_smoke.py
